[gd_scene load_steps=2 format=3 uid="uid://c38e3awgmkkgr"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_o4soc"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o4soc")

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 224.0
offset_right = 784.0
offset_bottom = 274.0
text = "HOST
"

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 283.0
offset_right = 784.0
offset_bottom = 333.0
text = "JOIN
"

[node name="name_text" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 366.0
offset_top = 175.0
offset_right = 768.0
offset_bottom = 210.0
placeholder_text = "name
"

[node name="ip_text" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 366.0
offset_top = 341.0
offset_right = 768.0
offset_bottom = 376.0
text = "127.0.0.1"
placeholder_text = "ip
"

[node name="error" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 58.0
offset_right = 212.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
